--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,9 +7,9 @@ html
     block header
       li
         ul
-          a(href="/") Link 1
+          a(href="/") index
         ul
-          a(href="/post/add") Link 2
+          a(href="/admin/") admin
         ul
-          a(href="/about") link 3
+          a(href="/about") resume
     block content
