--- a/views/index.pug
+++ b/views/index.pug
@@ -6,4 +6,6 @@ block content
 
   ul#slides.swiper-wrapper
     each post in posts
-      li #{post.getTitle()},  #{post.getContent()}, #{post.getCategory().getName()}
+      li
+        = post.getTitle() + ' ' + post.getContent() + ' ' + post.getCategory().getName() + ' '
+        a(href='/post/' + post.getId()) #{post.getThumb()}
