--- a/views/admin/dashboard.pug
+++ b/views/admin/dashboard.pug
@@ -2,6 +2,6 @@ li
   ul
     a(href="/admin/") index
   ul
-    a(href="post/") post
+    a(href="/admin/post/") post
   ul
-    a(href="category/") category
+    a(href="/admin/category/") category
