--- a/views/admin/index.pug
+++ b/views/admin/index.pug
@@ -6,7 +6,7 @@ block primary
       li
         = post.getTitle()
         form(method='POST', action='/admin' enctype="application/x-www-form-urlencoded")
-          <input type="hidden" name="_method" value="DELETE"/>
-          <input type="hidden" name="post_id" value=#{post.getId()}>
+          input(type="hidden" name="_method" value="DELETE")
+          input(type="hidden" name="post_id" value=post.getId())
 
           button(type='submit') Delete
