--- a/views/admin/post.pug
+++ b/views/admin/post.pug
@@ -1,13 +1,15 @@
 extends dashboard-layout
 
 block primary
-    form(method='POST' enctype='multipart/form-data')
+    form(method='POST', enctype='multipart/form-data')
+      input(type="hidden", name="_csrf", value=csrfToken)
+
       div.form-group
         label(for='title') Titre:
-        input#title.form-control(type='text', placeholder='first and last' name='title')
+        input#title.form-control(type='text', placeholder='first and last', name='title')
       div.form-group
         label(for='content') Description:
-        textarea#content.form-control(placeholder='name@email.com' name='content')
+        textarea#content.form-control(placeholder='name@email.com', name='content')
       div.form-group
         label(for='images') Images:
         input#title.form-control(type='file', name='images', multiple='multiple')
