--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,37 +1,25 @@
 
 header {
   padding-top:20px;
-  border-bottom: 1px solid orange;
-}
+  margin-bottom:60px;
 
-header p{
-  margin-top: 30px;
-}
+  text-align: center;
 
+}
+.gallery img {
+    width: 100%;
+}
+header a {
+  color:black;
+  font-size: 1.7em;
+}
 #main-logo  {
   margin-bottom: 2rem;
 }
 .social-list img {
-  width:25px;
+  width: 40px;
 }
 
 .social-list li {
   margin-top:10px;
-}
-
-.orange {
-  background-color: orange;
-}
-.circle {
-  width:60px;
-  height: 60px;
-  line-height: 60px;
-  border-radius: 50%; /* the magic */
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  text-align: center;
-  color: white;
-  font-size: 16px;
-  text-transform: uppercase;
-  font-weight: 700;
 }
