--- a/app/styles/dashboard.css
+++ b/app/styles/dashboard.css
@@ -1,31 +1,15 @@
 .dashboard {
   background-color: #cadbec;
 }
-
-.card {
-  box-shadow: 0px 1px 5px -2px #5E7D9B;
-  margin: 0 2px 10px;
-  border-radius: 3px;
-  background: #FFF;
-}
-.card-header {
-  height:60px;
-  background-color: #f6fafe;
-  width: 100%;
-}
-
-.card-content {
-  padding: 10px 10px 10px 10px;
-}
-
-.card-header h2{
-      text-align: left;
-  padding: 10px 25px;
-}
 /*.card-list-title {
   float:right!important;
 }*/
 /*dropzone*/
+
+.card-content.list {
+  max-height: 380px;
+  overflow: auto;
+}
 
 #dropzone {
   font: bold 24px/200px;
