--- a/app/styles/dashboard.css
+++ b/app/styles/dashboard.css
@@ -1,10 +1,6 @@
 .dashboard {
   background-color: #cadbec;
 }
-/*.card-list-title {
-  float:right!important;
-}*/
-/*dropzone*/
 
 .card-content.list {
   max-height: 380px;
@@ -50,4 +46,44 @@
     background-color: rgb(255, 255, 255);
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
+  }
+  .sortable-list {
+    display: table;
+    margin: 0 auto;
+  }
+  .sortable-list .sortable-container {
+    position: relative;
+    z-index: 0;
+    background-color: #f3f3f3;
+    border: 1px solid #efefef;
+    border-radius: 3px;
+    outline: none;
+    width: 200px;
+    height:400px;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;   
+    margin-bottom:25px; 
+  }
+  .sortable-list .element{ 
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 100%;
+    padding: 0 20px;
+    background-color: #fff;
+    border-bottom: 1px solid #efefef;
+    box-sizing: border-box;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    color: #333;
+    font-weight: 400;
+    height: 59px;
+    position: relative;
   }
